--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,8 +14,11 @@ body {
 }
 
 header {
-  /* Yellow Header */
-  background-color: #ffd700;
+  background: linear-gradient(
+    90deg,
+    rgba(251, 199, 7, 1) 35%,
+    rgba(34, 137, 230, 1) 64%
+  );
   padding: 10px 0px;
 }
 
@@ -327,4 +330,71 @@ svg {
 .navbar-brand img {
   max-height: 100px; /* Adjust the maximum height as needed for both mobile and desktop */
   margin-top: 0px;
+}
+
+.card {
+  height: 150px; /* Set a fixed height for the card */
+}
+
+.card-body {
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+}
+
+.card:hover .card-body {
+  background-color: #fbc707; /* Hover color for servlogo and servlogohfl */
+}
+
+/* .card:hover .servlogostar {
+  background-color: blue; 
+} */
+
+.servlogo,
+.servlogohfl,
+.servlogostar {
+  max-width: 50%; /* Set max-width to 100% to make sure the logo doesn't exceed its container */
+  margin: 0 auto 1px; /* Center the logo horizontally and add margin below it */
+  display: block; /* Ensure it behaves as a block-level element */
+}
+
+/* New Year Popup Styles */
+.popup-banner {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Smooth transition effect */
+  z-index: 1000; /* Ensure it appears above other content */
+}
+
+.popup-banner.active {
+  opacity: 1;
+  display: flex; /* Show the popup when active */
+}
+
+.popup-banner-image {
+  width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5em;
+  color: white;
+  cursor: pointer;
 }
