--- a/styles/insuranceplans.css
+++ b/styles/insuranceplans.css
@@ -27,6 +27,11 @@ h1 {
   width: 200px; /* Adjust the width as needed */
 }
 
+.card p {
+  color: black;
+  font-weight: bolder;
+}
+
 .card:hover {
   transform: scale(1.05);
 }
