--- a/styles/licplans.css
+++ b/styles/licplans.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Arial", sans-serif;
+  background-color: whitesmoke;
 }
 
 .container {
@@ -16,6 +17,11 @@ body {
 h1 {
   color: #333;
   width: 100%;
+}
+
+.card p {
+  color: black;
+  font-weight: bolder;
 }
 
 .card {
@@ -39,5 +45,10 @@ h1 {
 @media (max-width: 600px) {
   .card {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: 100% 100%;
   }
 }
