--- a/styles/styles.css
+++ b/styles/styles.css
@@ -398,3 +398,74 @@ svg {
   color: white;
   cursor: pointer;
 }
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-box {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 40px;
+  width: 300px; /* Adjust the width as needed */
+}
+
+.contact-box p {
+  color: #000000;
+}
+
+.contact-info h2 {
+  text-align: center;
+}
+
+.contact-box h3 {
+  color: #000000;
+}
+
+.contact-box p {
+  color: #000000;
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+}
+
+.contact-box img {
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+@media (min-width: 768px) {
+  .contact-info {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .contact-box {
+    margin-right: 20px;
+    margin-bottom: 20px;
+    width: calc(50% - 20px); /* Adjust the width as needed */
+  }
+
+  .contact-box.office-address,
+  .contact-box.qr-code {
+    margin-top: 20px;
+  }
+}
+
+.whatsapp-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+/* Adjust the width and height as needed */
+.whatsapp-icon {
+  width: 210px;
+  height: 90px;
+  align-items: center;
+}
